--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input type="submit" value="Log Out" />
     </form>
     <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" required />
+        <input type="text" size="25" placeholder="Write a To Do and Press Enter" required />
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
